--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Login/Registration</string>
     <string name="title_activity_register">Registration</string>
+    <string name="title_activity_location">LocationActivity</string>
 </resources>
