--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tutor On The Fly</string>
+    <string name="app_name">CBoK-it</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">Login/Registration</string>
+    <string name="title_activity_login">Login</string>
     <string name="title_activity_register">Registration</string>
     <string name="title_activity_location">LocationActivity</string>
 </resources>
