--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="title_activity_login">Login</string>
     <string name="title_activity_register">Registration</string>
     <string name="title_activity_location">LocationActivity</string>
+    <string-array name="usertype_array">
+        <item>Student</item>
+        <item>Tutor</item>
+        <item>Professor</item>
+    </string-array>
 </resources>
